--- a/paper/figures/CoverRelRFFig.tex
+++ b/paper/figures/CoverRelRFFig.tex
@@ -24,78 +24,72 @@
 
 \begin{document}
 \begin{tikzpicture}
-\node(12) {$F=$\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt]
+\node(12) {$F=$\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
 \node[draw, circle] {$1$}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
-          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1] {$3$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$4$}}     
+          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
    };
 \end{tikzpicture}
-\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=15pt,  outer sep=0pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=15pt,  outer sep=0pt, baseline=.9cm]
 \node[draw, circle] {$2$}
    child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$6$}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$9$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$8$}}     
-          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1] {$7$}}     
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$}}     
+          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$7$}}     
    }
-   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$10$}}
+   child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}
 ;
 \end{tikzpicture}
 };
 \node[right=1cm of 12](3) {
-\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
 \node[draw, circle] {$1$}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
-          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1] {$3$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$4$}}     
+          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
    };
 \end{tikzpicture}
-\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=20pt,  outer sep=0pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=15pt,  outer sep=0pt, baseline=.9cm]
 \node[draw, circle] {$6$}
    child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$2$}
-          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1] {$10$}}}
-          child[thick]{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$9$}}     
-          child[thick]{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$8$}}     
+          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}}
+          child[thick]{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$}}     
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$7$}}
 ;
 \end{tikzpicture}
 };
 \draw[->] (12) edge[->] node[above] {(3)} (3);
 \node[right=1cm of 3](45) {
-\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=.9cm]
 \node[draw, circle] {$1$}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
-          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1] {$3$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$4$}}     
+          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
    };
 \end{tikzpicture}
-\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=20pt,  outer sep=0pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=15pt,  outer sep=0pt, baseline=.9cm]
 \node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$6$}
    child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$2$}
-          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1] {$10$}}}
+          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$7$}}
 ;
 \end{tikzpicture}
-\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=20pt,  outer sep=0pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=20pt,  outer sep=0pt, baseline=.9cm]
 \node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$};
-\end{tikzpicture}
-\begin{tikzpicture}[grow=up, inner sep=1pt, level distance=1cm, sibling distance=20pt,  outer sep=0pt]
-\node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$9$};
 \end{tikzpicture}
 };
 \draw[->] (3) edge[->] node[above] {(4)(5)} (45);
 \node[right=1cm of 45](6) {
-\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt]
+\begin{tikzpicture}[grow=up, inner sep=1pt,  outer sep=0pt, level distance=1cm, sibling distance=15pt, baseline=1.9cm]
 \node[draw, circle] {$1$}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$5$}
-          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1] {$3$}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}
+          child{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$3$}}
           child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$8$}}
           child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$6$}
    child[thick]{node[circle, fill=bleu, fill opacity=0.4, text opacity=1, anchor=center] {$2$}
-          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1] {$10$}}}
+          child{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$9$}}}
    child[thick]{node[circle, fill=rouge, fill opacity=0.4, text opacity=1, anchor=center] {$7$}}}
-          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1] {$4$}}     
+          child{node[circle, fill=vert, fill opacity=0.4, text opacity=1, anchor=center] {$4$}}     
    };
 \end{tikzpicture} $=G$
 };
